asm_1st_bnf.txt
mnemonic:
	add
	...
	sw

register:
	zero
	sp
	fp
	r0
	...

label:
	identifier(大文字推奨)

operand:
	register
	label
	digit

operand_list:
	ε
	","  // これは今の所サポートしていない
	"," operand operand_list

single_instr:
	mnemonic operand operand_list

labeled_single_instr:
    single_instr
	label ":" "\n"* labeled_single_instr

asm_program_line:
	EOF
	"\n"
	single_instr EOF
	single_instr "\n"
	single_instr ";" asm_program_line

asm_program:
	asm_program_line
	asm_program_line asm_program
